--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body class="root">
   <header class="header">
     <img class="header__logo" src="./images/header-logo.svg" alt="старая карта РФ">
-      <nav class="header__lang-box">
-        <a class="header__lang-link" href="#">RU</a>
+      <div class="header__lang-box">
+        <a class="header__lang-link header__lang-link_active" href="#">RU</a>
         <a class="header__lang-link" href="#">EN</a>
-      </nav>
+      </div>
   </header>
 
-  <div class="page">
+  <main class="page">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -33,13 +33,13 @@
           и проехала 20 тысяч километров
           по родной стране. Мы выбрали
           и описали некоторые интересные места, достойные вашего отпуска.</p>
-        <div class="intro__list">
-          <p class="intro__fact">Часовых поясов <span class="intro__number">11</span></p>
-          <p class="intro__fact">Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></p>
-          <p class="intro__fact">Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></p>
-          <p class="intro__fact">Природных заповедников <span class="intro__number">105</span></p>
-          <p class="intro__fact">Аэропортов <span class="intro__number">24</span></p>
-        </div>
+        <ul class="intro__list">
+          <li class="intro__fact">Часовых поясов <span class="intro__number">11</span></li>
+          <li class="intro__fact">Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></li>
+          <li class="intro__fact">Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></li>
+          <li class="intro__fact">Природных заповедников <span class="intro__number">105</span></li>
+          <li class="intro__fact">Аэропортов <span class="intro__number">24</span></li>
+        </ul>
       </section>
 
       <section class="photo-grid">
@@ -59,10 +59,10 @@
 
       <section class="places">
 
-        <div class="place">
-          <h3 class="place__title">Куршская коса</h3>
+        <article class="place">
+          <h2 class="place__title">Куршская коса</h2>
           <div class="website">
-            <div class="website__url-heading">URL</div>
+            <p class="website__url-heading">URL</p>
             <a class="website__link" href="http://park-kosa.ru">park-kosa.ru</a>
           </div>
           <img src="images/place-kosa.jpg" class="place__image" alt="картинка">
@@ -75,11 +75,11 @@
               Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
               Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
           </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Кольский</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Кольский</h2>
           <div class="website">
-            <div class="website__url-heading">URL</div>
+            <p class="website__url-heading">URL</p>
             <a class="website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
           </div>
           <img src="images/place-kolsky.jpg" alt="картинка" class="place__image">
@@ -91,11 +91,11 @@
               об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а
               от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
           </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Алтай</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Алтай</h2>
           <div class="website">
-            <div class="website__url-heading">URL</div>
+            <p class="website__url-heading">URL</p>
             <a class="website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
           </div>
           <img src="images/place-altai.jpg" alt="картинка" class="place__image">
@@ -107,11 +107,11 @@
             флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули.
             И знаменитые манулы — тоже обитатели Алтайского края.</p>
           </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Зимний Байкал</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="website">
-            <div class="website__url-heading">URL</div>
+            <p class="website__url-heading">URL</p>
             <a class="website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
           </div>
           <img src="images/place-winter-baikal.jpg" alt="" class="place__image">
@@ -123,11 +123,11 @@
                 к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля»
                 был поставлен мировой рекорд — 197.011 км/ч.</p>
             </div>
-        </div>
-        <div class="place">
-          <h3 class="place__title">Карелия</h3>
+        </article>
+        <article class="place">
+          <h2 class="place__title">Карелия</h2>
           <div class="website">
-            <div class="website__url-heading"></div>
+            <p class="website__url-heading">URL</p>
             <a class="website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
           </div>
           <img src="images/place-karelia.jpg" alt="картинка" class="place__image">
@@ -138,29 +138,28 @@
               солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких
               тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
           </div>
-        </div>
+        </article>
       </section>
 
-      <div class="cover">
+      <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay">
           <!--<img src="./images/__background.png" alt="картинка" class="cover__background">-->
-          <h3 class="cover__title">До Байкала «на&nbsp;собаках»</h3>
-          <div class="cover__subtitle">По мотивам учебной темы
-            о Транссибе — путешествие
-            от столицы до Байкала на электричках.</div>
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
-      </div>
+      </section>
+  </main>
 
-      <footer class="footer">
-        <nav class="footer__nav">
-          <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-          <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-          <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-          <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-          <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
-        </nav>
-        <p class="footer__copyright">© 2022. Руслан</p>
-      </footer>
-  </div>
+  <footer class="footer">
+    <nav class="footer__nav">
+      <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+      <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+      <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+      <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+      <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+    </nav>
+    <p class="footer__copyright">© 2022. Руслан</p>
+  </footer>
+
 </body>
 </html>
